force-app/main/default/objects/CleaningTask__c/CleaningTask__c.object-meta.xml
<CustomObject>
    <description>Cleaning task scheduled for a property or booking turnover</description>
    <label>Cleaning Task</label>
    <nameField>
        <displayFormat>CLN-{00000}</displayFormat>
        <label>Task Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cleaning Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>