force-app/main/default/objects/CleaningTask__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Cleaning Tasks</relationshipLabel>
    <relationshipName>CleaningTasks</relationshipName>
    <type>Lookup</type>
</CustomField>