force-app/main/default/objects/CleaningTask__c/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Stayover Clean</fullName>
            </value>
            <value>
                <fullName>Turnover Clean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>