force-app/main/default/objects/CleaningTask__c/listViews/Todays_Pending_Tasks.listView-meta.xml
<ListView>
    <fullName>Todays_Pending_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>TaskType__c</columns>
    <columns>ScheduledDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ScheduledDate__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>Today&apos;s Pending Tasks</label>
</ListView>